update/priority-prices2-inc (#308)
* heal for priority prices

* lookback period

* heal logic and test update

* complete models for performance

* provider column

--- a/models/silver/hourly_prices/_prices2/all_providers2/silver__token_prices_priority2.yml
+++ b/models/silver/hourly_prices/_prices2/all_providers2/silver__token_prices_priority2.yml
@@ -14,10 +14,9 @@ models:
           - dbt_expectations.expect_row_values_to_have_recent_data:
               datepart: day
               interval: 1
-          - hour_sequence_gaps:
-              partition_by:
-                - TOKEN_ADDRESS
-                - BLOCKCHAIN
+          - price_hour_sequence_gaps:
+              partition_by_1: TOKEN_ADDRESS
+              partition_by_2: BLOCKCHAIN
               column_name: RECORDED_HOUR
       - name: TOKEN_ADDRESS
         tests:
