--- a/models/silver/prices/coin_gecko2/silver__native_prices_coingecko.yml
+++ b/models/silver/prices/coin_gecko2/silver__native_prices_coingecko.yml
@@ -1,30 +1,27 @@
 version: 2
 models:
-  - name: silver__token_prices_coinmarketcap2
+  - name: silver__native_prices_coingecko
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - RECORDED_HOUR
-            - LOWER(TOKEN_ADDRESS)
-            - PLATFORM_ID
+            - ID
+            - PLATFORM
 
     columns:
       - name: RECORDED_HOUR
         tests:
           - price_hour_sequence_gaps:
-              partition_by_1: TOKEN_ADDRESS
-              partition_by_2: PLATFORM_ID
+              partition_by_1: ID
+              partition_by_2: PLATFORM
               column_name: RECORDED_HOUR
           - dbt_expectations.expect_row_values_to_have_recent_data:
               datepart: day
               interval: 1
-      - name: TOKEN_ADDRESS
+      - name: ID
         tests:
           - not_null
       - name: PLATFORM
-        tests:
-          - not_null
-      - name: PLATFORM_ID
         tests:
           - not_null
       - name: CLOSE
@@ -33,7 +30,7 @@ models:
       - name: IS_IMPUTED
         tests: 
           - not_null
-      - name: TOKEN_PRICES_COINMARKETCAP_ID
+      - name: NATIVE_PRICES_COINGECKO_ID
         tests:
           - not_null
       - name: _INSERTED_TIMESTAMP
