--- a/models/silver/prices/complete/silver__complete_provider_prices.yml
+++ b/models/silver/prices/complete/silver__complete_provider_prices.yml
@@ -1,17 +1,17 @@
 version: 2
 models:
-  - name: silver__all_prices_all_providers2
+  - name: silver__complete_provider_prices
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - ID
+            - ASSET_ID
             - RECORDED_HOUR
             - PROVIDER
     columns:
       - name: PROVIDER
         tests:
           - not_null
-      - name: ID
+      - name: ASSET_ID
         tests:
           - not_null
       - name: RECORDED_HOUR
