--- a/models/gold/price_temp/price_temp__dim_provider_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__dim_provider_asset_metadata_temp.yml
@@ -6,7 +6,7 @@ models:
     columns:
       - name: PROVIDER
         description: The provider or source of the data.
-      - name: ID
+      - name: ASSET_ID
         description: The unique identifier representing the asset.
       - name: NAME
         description: The name of asset.
