--- a/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
@@ -4,7 +4,7 @@ models:
     description: A convenience table holding prioritized asset metadata and other relevant details pertaining to each token_address.
 
     columns:
-      - name: ID
+      - name: ASSET_ID
         description: The unique identifier representing the asset.
       - name: NAME
         description: The name of asset.
