--- a/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
@@ -4,6 +4,8 @@ models:
     description: A convenience table holding prioritized asset metadata and other relevant details pertaining to each token_address.
 
     columns:
+      - name: ID
+        description: Deprecating soon! Please use the ASSET_ID column instead.
       - name: ASSET_ID
         description: The unique identifier representing the asset.
       - name: NAME
