misc-prices-column-updates (#312)
* native asset test

* silver native models

* symbol, incremental, other

* native all providers and priority

* asset id

* id col

* remove

--- a/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
@@ -5,6 +5,8 @@ models:
 
     columns:
       - name: ID
+        description: Deprecating soon! Please use the ASSET_ID column instead.
+      - name: ASSET_ID
         description: The unique identifier representing the asset.
       - name: NAME
         description: The name of asset.
