--- a/models/silver/prices/all_providers2/silver__native_asset_metadata_priority.yml
+++ b/models/silver/prices/all_providers2/silver__native_asset_metadata_priority.yml
@@ -4,7 +4,7 @@ models:
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - ID
+            - SYMBOL
             - BLOCKCHAIN
           
     columns:
@@ -12,6 +12,9 @@ models:
         tests:
           - not_null
       - name: ID
+        tests:
+          - not_null
+      - name: SYMBOL
         tests:
           - not_null
       - name: BLOCKCHAIN
