--- a/models/silver/prices/coin_market_cap2/silver__native_asset_metadata_coinmarketcap.yml
+++ b/models/silver/prices/coin_market_cap2/silver__native_asset_metadata_coinmarketcap.yml
@@ -4,7 +4,7 @@ models:
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - ID
+            - SYMBOL
             - PLATFORM
     columns:
       - name: ID
