--- a/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
@@ -13,7 +13,7 @@ models:
       - name: SYMBOL
         description: The symbol of asset.
       - name: TOKEN_ADDRESS
-        description: Address of the token. May be NULL or 'native' if referring to a native asset.
+        description: Address of the token. May be NULL if referring to a native asset.
       - name: BLOCKCHAIN
         description: The Blockchain, Network, or Platform where this asset has a token address. This column is derived by manually grouping blockchain_name, for reference purposes.
       - name: BLOCKCHAIN_NAME
@@ -22,6 +22,8 @@ models:
         description: The unique identifier of the Blockchain, Network, or Platform where this asset has a token address.
       - name: DECIMALS
         description: The number of decimals for token contract. May be NULL if referring to a native asset.
+      - name: IS_NATIVE
+        description: A flag indicating assets native to the respective blockchain.
       - name: IS_DEPRECATED
         description: A flag indicating if the asset is deprecated or no longer supported by the provider.
       - name: EZ_ASSET_METADATA_ID
