--- a/models/gold/price_temp/price_temp__ez_hourly_token_prices_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_hourly_token_prices_temp.yml
@@ -11,7 +11,7 @@ models:
       - name: SYMBOL
         description: Symbol of the token
       - name: DECIMALS
-        description: The number of decimals for token contract. May be NULL or 'native' if referring to a native asset.
+        description: The number of decimals for token contract. May be NULL if referring to a native asset.
       - name: BLOCKCHAIN
         description: The Blockchain, Network, or Platform where this asset has a token address. This column is derived by manually grouping blockchain_name, for reference purposes. 
       - name: BLOCKCHAIN_NAME
@@ -20,6 +20,8 @@ models:
         description: The unique identifier of the Blockchain, Network, or Platform where this asset has a token address.
       - name: PRICE
         description: Closing price of the recorded hour in USD
+      - name: IS_NATIVE
+        description: A flag indicating assets native to the respective blockchain.
       - name: IS_IMPUTED
         description: A flag indicating if the price was imputed, or derived, from the last arriving record. This is generally used for tokens with low-liquidity or inconsistent reporting.
       - name: IS_DEPRECATED
