--- a/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
@@ -13,7 +13,7 @@ models:
       - name: SYMBOL
         description: The symbol of asset.
       - name: TOKEN_ADDRESS
-        description: Address of the token. May be NULL if referring to a native asset.
+        description: Address of the token. This will be NULL if referring to a native asset.
       - name: BLOCKCHAIN
         description: The Blockchain, Network, or Platform where this asset has a token address. This column is derived by manually grouping blockchain_name, for reference purposes.
       - name: BLOCKCHAIN_NAME
