--- a/packages.yml
+++ b/packages.yml
@@ -6,4 +6,4 @@ packages:
   - package: dbt-labs/dbt_utils
     version: 1.0.0
   - git: https://github.com/FlipsideCrypto/fsc-utils.git
-    revision: "foobar"
+    revision: "v1.20.2"
