--- a/models/silver/prices/all_providers2/silver__token_prices_priority2.yml
+++ b/models/silver/prices/all_providers2/silver__token_prices_priority2.yml
@@ -18,6 +18,11 @@ models:
               partition_by_1: TOKEN_ADDRESS
               partition_by_2: BLOCKCHAIN
               column_name: RECORDED_HOUR
+              config:
+                severity: warn
+                warn_if: ">0"
+                severity: error
+                error_if: ">5000"
       - name: TOKEN_ADDRESS
         tests:
           - not_null
