--- a/models/silver/prices/coin_gecko2/silver__token_prices_coingecko2.yml
+++ b/models/silver/prices/coin_gecko2/silver__token_prices_coingecko2.yml
@@ -15,6 +15,11 @@ models:
               partition_by_1: TOKEN_ADDRESS
               partition_by_2: PLATFORM_ID
               column_name: RECORDED_HOUR
+              config:
+                severity: warn
+                warn_if: ">0"
+                severity: error
+                error_if: ">2500"
           - dbt_expectations.expect_row_values_to_have_recent_data:
               datepart: day
               interval: 1
