--- a/.github/workflows/dbt_run_prices.yml
+++ b/.github/workflows/dbt_run_prices.yml
@@ -3,9 +3,8 @@ run-name: dbt_run_scheduled_prices
 
 on:
   workflow_dispatch:
-  schedule:
-    # Runs "every hour" (see https://crontab.guru)
-    - cron: '45 */1 * * *'
+    branches:
+      - "main"
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
