--- a/models/bronze/prices/coingecko/bronze__all_asset_metadata_coingecko2.yml
+++ b/models/bronze/prices/coingecko/bronze__all_asset_metadata_coingecko2.yml
@@ -1,6 +1,15 @@
 version: 2
 models:
   - name: bronze__all_asset_metadata_coingecko2
+    tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns:
+            - ID
+            - TOKEN_ADDRESS
+            - NAME
+            - SYMBOL
+            - PLATFORM
+            - PLATFORM_ID
     columns:
       - name: ID
         tests:
