--- a/.github/workflows/dbt_run_streamline_asset_metadata.yml
+++ b/.github/workflows/dbt_run_streamline_asset_metadata.yml
@@ -3,8 +3,8 @@ run-name: dbt_run_streamline_asset_metadata
 
 on:
   workflow_dispatch:
-    branches:
-      - "main"
+  schedule:
+    - cron: '5 * * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
