--- a/.github/workflows/dbt_run_streamline_prices_history.yml
+++ b/.github/workflows/dbt_run_streamline_prices_history.yml
@@ -3,8 +3,8 @@ run-name: dbt_run_streamline_prices_history
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '55 1 * * *'
+    branches:
+      - "main"
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
