--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -19,6 +19,7 @@ on:
           - DBT
           - DBT_CLOUD
           - DBT_EMERGENCY
+          - DBT_MEGA
         default: DBT
       dbt_command:
         type: string
