--- a/models/gold/price_temp/price_temp__ez_asset_metadata.yml
+++ b/models/gold/price_temp/price_temp__ez_asset_metadata.yml
@@ -1,7 +1,7 @@
 version: 2
 models:
   - name: price_temp__ez_asset_metadata
-    description: A convenience table holding prioritized asset metadata and other relevant details pertaining to each token_address.
+    description: A convenience table holding prioritized asset metadata and other relevant details pertaining to each token_address and native asset.
 
     columns:
       - name: ID
