--- a/models/gold/price_temp/price_temp__dim_asset_metadata_provider.yml
+++ b/models/gold/price_temp/price_temp__dim_asset_metadata_provider.yml
@@ -1,25 +1,25 @@
 version: 2
 models:
   - name: price_temp__dim_asset_metadata_provider
-    description: A comprehensive dimensional table holding all provider asset metadata and other relevant details pertaining to each id.
+    description: '{{ doc("prices_dim_asset_metadata_provider_table_doc") }}'
 
     columns:
       - name: PROVIDER
-        description: The provider or source of the data.
+        description: '{{ doc("prices_provider")}}'
       - name: ASSET_ID
-        description: The unique identifier representing the asset.
+        description: '{{ doc("prices_asset_id") }}'
       - name: NAME
-        description: The name of asset.
+        description: '{{ doc("prices_name") }}'
       - name: SYMBOL
-        description: The symbol of asset.
+        description: '{{ doc("prices_symbol") }}'
       - name: TOKEN_ADDRESS
-        description: The specific address representing the asset on a specific platform.
+        description: '{{ doc("prices_token_address") }}'
       - name: BLOCKCHAIN
-        description: The Blockchain, Network, or Platform where this asset has an id.
+        description: '{{ doc("prices_blockchain") }}'
       - name: BLOCKCHAIN_ID
-        description: The unique identifier of the Blockchain, Network, or Platform where this asset has an id.
+        description: '{{ doc("prices_blockchain_id") }}'
       - name: DECIMALS
-        description: The number of decimal places the token needs adjusted where token values exist.
+        description: '{{ doc("prices_decimals") }}'
       - name: DIM_ASSET_METADATA_PROVIDER_ID
         description: '{{ doc("pk") }}'   
       - name: INSERTED_TIMESTAMP
