--- a/models/gold/price_temp/price_temp__fact_prices_provider_hourly.yml
+++ b/models/gold/price_temp/price_temp__fact_prices_provider_hourly.yml
@@ -1,21 +1,21 @@
 version: 2
 models:
   - name: price_temp__fact_prices_provider_hourly
-    description: A comprehensive fact table holding id and provider specific open, high, low, close hourly token prices.
+    description: '{{ doc("prices_fact_prices_provider_hourly_table_doc") }}'
 
     columns:
       - name: HOUR
-        description: Hour that the price was recorded at
+        description: '{{ doc("prices_hour")}}'
       - name: ASSET_ID
-        description: Unique identifier for the hourly token price record
+        description: '{{ doc("prices_asset_id") }}'
       - name: OPEN
-        description: Opening price of the recorded hour in USD
+        description: '{{ doc("prices_open") }}'
       - name: HIGH
-        description: Highest price of the recorded hour in USD
+        description: '{{ doc("prices_high") }}'
       - name: LOW
-        description: Lowest price of the recorded hour in USD
+        description: '{{ doc("prices_low") }}'
       - name: CLOSE
-        description: Closing price of the recorded hour in USD
+        description: '{{ doc("prices_close") }}'
       - name: FACT_PRICES_PROVIDER_HOURLY_ID
         description: '{{ doc("pk") }}'   
       - name: INSERTED_TIMESTAMP
