--- a/.github/workflows/dbt_run_dev_refresh.yml
+++ b/.github/workflows/dbt_run_dev_refresh.yml
@@ -35,11 +35,11 @@ jobs:
         run: |
           pip install -r requirements.txt
           dbt deps
-      - name: Run DBT Jobs
+      - name: Run Dev Refresh
         run: |
           dbt run-operation run_sp_create_prod_clone
 
-  run_dbt_jobs_udf:
+  run_dbt_jobs_udfs:
     runs-on: ubuntu-latest
     environment:
       name: workflow_dev
@@ -56,7 +56,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           dbt deps
-      - name: Run DBT Jobs
+      - name: Run Recreate UDFs
         run: |
           dbt run-operation fsc_utils.create_udf_bulk_rest_api_v2 --vars '{"UPDATE_UDFS_AND_SPS":True}'
           dbt run -s livequery_models.deploy.core._live --vars '{"UPDATE_UDFS_AND_SPS":True}'
