AN-4527/Add-EVM-lending-to-crosschain  (#316)
* add lending sources

* add silver models

* add .yml tests

* add docs + gold

* fix gap

* update docs

* add unique key and remove inserted_timestamp

* remove origin_to_from

* orgin_to_from updates + update silver yml for protocol_market

* missing comma

* deposit tests

* remove outlier filters

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -33,6 +33,12 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: ethereum_silver
     database: ethereum
     schema: silver
@@ -113,6 +119,12 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: avalanche_silver
     database: avalanche
     schema: silver
@@ -140,6 +152,12 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws      
   - name: polygon_silver
     database: polygon
     schema: silver
@@ -167,6 +185,12 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: optimism_silver
     database: optimism
     schema: silver
@@ -194,6 +218,12 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: bsc_silver
     database: bsc
     schema: silver
@@ -221,6 +251,12 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: thorchain_defi
     database: thorchain
     schema: defi
@@ -525,6 +561,12 @@ sources:
     tables: 
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: gnosis_silver
     database: gnosis
     schema: silver
@@ -551,6 +593,12 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_flashloans
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: gnosis_observ
     database: gnosis
     schema: silver_observability
