--- a/models/gold/price_temp/price_temp__dim_asset_metadata.yml
+++ b/models/gold/price_temp/price_temp__dim_asset_metadata.yml
@@ -1,11 +1,13 @@
 version: 2
 models:
-  - name: price_temp__dim_asset_metadata_provider
-    description: '{{ doc("prices_dim_asset_metadata_provider_table_doc") }}'
+  - name: price_temp__dim_asset_metadata
+    description: Deprecating soon! Note, only the ID and DECIMALS columns are being removed. The dim_asset_metadata table itself is not being deprecated. '{{ doc("prices_dim_asset_metadata_table_doc") }}'
 
     columns:
       - name: PROVIDER
         description: '{{ doc("prices_provider")}}'
+      - name: ID
+        description: '{{ doc("prices_id_deprecation")}}'
       - name: ASSET_ID
         description: '{{ doc("prices_asset_id") }}'
       - name: NAME
@@ -19,8 +21,8 @@ models:
       - name: BLOCKCHAIN_ID
         description: '{{ doc("prices_blockchain_id") }}'
       - name: DECIMALS
-        description: '{{ doc("prices_decimals") }}'
-      - name: DIM_ASSET_METADATA_PROVIDER_ID
+        description: '{{ doc("prices_decimals_deprecation")}}'
+      - name: DIM_ASSET_METADATA_ID
         description: '{{ doc("pk") }}'   
       - name: INSERTED_TIMESTAMP
         description: '{{ doc("inserted_timestamp") }}'   
