--- a/models/gold/price/price__ez_hourly_token_prices.yml
+++ b/models/gold/price/price__ez_hourly_token_prices.yml
@@ -1,32 +1,4 @@
 version: 2
 models:
   - name: price__ez_hourly_token_prices
-    description: A convenience table for determining token prices by address and blockchain.
-    tests:
-      - dbt_utils.unique_combination_of_columns:
-          combination_of_columns:
-            - HOUR
-            - TOKEN_ADDRESS
-            - BLOCKCHAIN
-
-    columns:
-      - name: HOUR
-        description: Hour that the price was recorded at
-      - name: TOKEN_ADDRESS
-        description: Address of the token
-      - name: SYMBOL
-        description: Symbol of the token
-      - name: DECIMALS
-        description: The number of decimals for token contract
-      - name: BLOCKCHAIN
-        description: Blockchain, Network, or Platform the token price is recorded on.
-      - name: PRICE
-        description: Closing price of the recorded hour in USD
-      - name: EZ_HOURLY_TOKEN_PRICES_ID
-        description: '{{ doc("pk") }}'   
-        tests:
-          - unique
-      - name: INSERTED_TIMESTAMP
-        description: '{{ doc("inserted_timestamp") }}'   
-      - name: MODIFIED_TIMESTAMP
-        description: '{{ doc("modified_timestamp") }}' 
+    description: Deprecating soon! Please use price.ez_prices_hourly or price.fact_prices_ohlc_hourly instead.
