--- a/models/gold/cosmos/cosmos__fact_blocks.yml
+++ b/models/gold/cosmos/cosmos__fact_blocks.yml
@@ -1,6 +1,7 @@
 version: 2
 models:
   - name: cosmos__fact_blocks
+    description: Records of all blocks that have occurred on Axelar, Cosmos, and Osmosis.
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
