test and token rename

--- a/.github/workflows/dbt_contributors_weekly.yml
+++ b/.github/workflows/dbt_contributors_weekly.yml
@@ -36,5 +36,5 @@ jobs:
 
       - name: Run DBT Jobs
         run: |
-          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'GB_TOKEN', frequency: ['contributors']}"
+          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'TOKEN', frequency: ['contributors']}"
           dbt run --model silver__github_activity
