--- a/.github/workflows/dbt_general_weekly.yml
+++ b/.github/workflows/dbt_general_weekly.yml
@@ -36,5 +36,6 @@ jobs:
 
       - name: Run DBT Jobs
         run: |
-          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'GB_TOKEN', frequency: ['core']}"
+          dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'TOKEN', frequency: ['core']}"
           dbt run --model silver__github_activity
+          dbt test -s github_data_null
