--- a/models/silver/labels/silver__labels_combined.yml
+++ b/models/silver/labels/silver__labels_combined.yml
@@ -15,25 +15,30 @@ models:
       - name: CREATOR
         description: The name of the creator of the label
         tests:
-          - not_null
+          - not_null:
+              where: _IS_DELETED = FALSE
       - name: INSERT_DATE
         description: The date the label was inserted in the table
       - name: LABEL_TYPE
         description: A high-level category describing the addresses main function or ownership
         tests:
-          - not_null
+          - not_null:
+              where: _IS_DELETED = FALSE
       - name: LABEL_SUBTYPE
         description: A sub-category nested within label type providing further detail
         tests:
-          - not_null
+          - not_null:
+              where: _IS_DELETED = FALSE
       - name: ADDRESS_NAME
         description: Name of the address
         tests:
-          - not_null
+          - not_null:
+              where: _IS_DELETED = FALSE
       - name: PROJECT_NAME
         description: Name of the controlling entity of the address
         tests:
-          - not_null
+          - not_null:
+              where: _IS_DELETED = FALSE
       - name: ADDRESS
         description: Address that the label is for. This is the field that should be used to join other tables with labels. 
         tests:
