--- a/.github/workflows/dbt_repo_activity_core_weekly.yml
+++ b/.github/workflows/dbt_repo_activity_core_weekly.yml
@@ -1,5 +1,5 @@
-name: dbt_general_weekly
-run-name: dbt_general_weekly
+name: dbt_repo_activity_core_weekly
+run-name: dbt_repo_activity_core_weekly
 
 on:
   workflow_dispatch:
