--- a/.github/workflows/dbt_test_daily.yml
+++ b/.github/workflows/dbt_test_daily.yml
@@ -1,11 +1,10 @@
-name: dbt_run_scheduled
-run-name: dbt_run_scheduled
+name: dbt_test_daily
+run-name: dbt_test_daily
 
 on:
   workflow_dispatch:
   schedule:
-    # Runs "every hour" (see https://crontab.guru)
-    - cron: '0 */1 * * *'
+    - cron: '0 4 * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -39,4 +38,5 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt run -m "crosschain_models,tag:hourly"
+          dbt test --exclude "crosschain_models,tag:gha_tasks" livequery_models
+          
