--- a/models/silver/prices/all_providers/silver__token_prices_all_providers.yml
+++ b/models/silver/prices/all_providers/silver__token_prices_all_providers.yml
@@ -1,28 +1,19 @@
 version: 2
 models:
-  - name: silver__token_prices_priority2
+  - name: silver__token_prices_all_providers
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - RECORDED_HOUR
             - LOWER(TOKEN_ADDRESS)
-            - BLOCKCHAIN
-
+            - BLOCKCHAIN_ID
+            - PROVIDER
     columns:
       - name: RECORDED_HOUR
         tests:
           - dbt_expectations.expect_row_values_to_have_recent_data:
               datepart: day
               interval: 1
-          - price_hour_sequence_gaps:
-              partition_by_1: TOKEN_ADDRESS
-              partition_by_2: BLOCKCHAIN
-              column_name: RECORDED_HOUR
-              config:
-                severity: warn
-                warn_if: ">0"
-                severity: error
-                error_if: ">5000"
       - name: TOKEN_ADDRESS
         tests:
           - not_null
