--- a/.github/workflows/dbt_run_dev_refresh.yml
+++ b/.github/workflows/dbt_run_dev_refresh.yml
@@ -41,6 +41,7 @@ jobs:
 
   run_dbt_jobs_udfs:
     runs-on: ubuntu-latest
+    needs: run_dbt_jobs_refresh
     environment:
       name: workflow_dev
 
